--- a/app/src/main/res/layout/activity_create_timer.xml
+++ b/app/src/main/res/layout/activity_create_timer.xml
@@ -29,8 +29,7 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        tools:srcCompat="@tools:sample/avatars"
-        android:src="@mipmap/ic_launcher"/>
+        tools:srcCompat="@mipmap/ic_launcher"/>
 
     <Button
         android:id="@+id/chooseRingtoneButton"
